apps/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
    version: v0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
      version: v0
  template:
    metadata:
      labels:
        app: sabnzbd
        version: v0
    spec:
      containers:
      - name: sabnzbd
        image: linuxserver/sabnzbd
        resources:
          limits:
            cpu: "1000m"
            memory: "756Mi"
          requests:
            cpu: "400m"
            memory: "256Mi"
        ports:
        - containerPort: 8080
          name: sabnzbd-http
        - containerPort: 9090
          name: sabnzbd-https
        volumeMounts:
        - name: sabnzbd-config
          mountPath: /config
        - name: sabnzbd-download
          mountPath: /mnt
        imagePullPolicy: Always
      volumes:
      - name: sabnzbd-config
        persistentVolumeClaim:
          claimName: sabnzbd-config
      - name: sabnzbd-download
        persistentVolumeClaim:
          claimName: sabnzbd-download
