apps/sabnzbd/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
    kubernetes.io/name: "sabnzbd"
spec:
  selector:
    app: sabnzbd
  ports:
  - name: sabnzbd
    port: 8080
    targetPort: 8080
  type: ClusterIP
